--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "16.1.1",
     "next-intl": "^4.6.1",
     "next-themes": "^0.4.6",
+    "nextjs-toast-notify": "^1.57.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "swiper": "^12.0.3",
